# mwe-mac-cmake-swig-miniconda3-error

./: CMakeLists.txt  LICENSE  README.md
build-osx-not-working/: CMakeCache.txt  Makefile  cmake_install.cmake
build-osx-not-working/src/: Makefile  cmake_install.cmake
build-osx-not-working/swig/: Makefile  cmake_install.cmake
build-osx-working/: CMakeCache.txt  Makefile  cmake_install.cmake
build-osx-working/src/: Makefile  cmake_install.cmake  libhello-shared.dylib
build-osx-working/swig/: Makefile  cmake_install.cmake  hello.py  helloPYTHON_wrap.c
src/: CMakeLists.txt  hello.cpp
swig/: CMakeLists.txt  hello.i  hello.py  setup.py
