FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
FIND_PACKAGE(PythonLibs REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/")

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
SWIG_ADD_LIBRARY(hello TYPE MODULE LANGUAGE python SOURCES ./hello.i)

SWIG_LINK_LIBRARIES(hello hello-shared)
SWIG_LINK_LIBRARIES(hello ${PYTHON_LIBRARIES})